[package]
name = "trademark-category"
version = "0.1.0"
edition = "2024"
description = "商标局回文分类归档器"
authors = ["KimdowEin"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.4", features = ["derive"] }
md-5 = "0.10.6"
regex = "1.10"
tap = "1.0.1"
walkdir = "2.4"
zip = "2.2"
tempfile = "3.14"
rayon = "1.11.0"
uuid = { version = "1.23.0", features = ["v4"] }
indicatif = { version = "0.18.4", features = ["rayon"] }

[profile.release]
opt-level = 3
lto = true
